--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
 
     <div class="content">
       <div class="wheel-section">
-        <div class="section-title">
+        <div class="section-title" style="margin-bottom: 30px;">
           <span>🎰</span>
           <span>VÒNG QUAY MAY MẮN</span>
           <span>🎰</span>
@@ -410,7 +410,7 @@
           <input id="qrImage" type="file" accept="image/*" />
         </div>
 
-        <button class="btn-spin" id="btnSpin">🎉 QUAY NGAY 🎉</button>
+        <button class="btn-spin" id="btnSpin" style="margin-top: 15px;">🎉 QUAY NGAY 🎉</button>
         <div class="error-msg" id="err"></div>
       </div>
 
